3 fixes 1) start new calculation if a number is entered after totaling.  2) Throw error is value is greater than 9999999. 3) Added overflow hidden to input div.

--- a/Calculator/css/style.css
+++ b/Calculator/css/style.css
@@ -63,6 +63,7 @@ html{
   margin-bottom: 15px;
   border-bottom: 1px solid black;
   border-top: 0px;
+  overflow: hidden;
 }
 
 #title{
